--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Game Launcher</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://i.imgur.com/GSJbXh5.png">
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="https://i.imgur.com/GSJbXh5.png" />
 </head>
 <body>
   <script src="script.js"></script>
