--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Oskar Projects Game Launcher</title>
   <link rel="icon" href="https://i.imgur.com/GSJbXh5.png" />
   <style>
-    /* Basic Reset and Background */
     body {
       margin: 0;
       padding: 0;
@@ -16,8 +15,6 @@
       user-select: none;
       overflow-x: hidden;
     }
-
-    /* Logo Styles */
     #logo {
       width: 220px;
       margin: 40px auto 20px;
@@ -29,8 +26,6 @@
     #logo:hover {
       transform: scale(1.05) rotate(5deg);
     }
-
-    /* Warning text for Safari */
     #warning {
       color: #ffcc00;
       font-size: 14px;
@@ -38,15 +33,11 @@
       font-weight: 600;
       text-shadow: 0 0 5px #ffcc00;
     }
-
-    /* Game list container */
     #game-list {
       display: flex;
       justify-content: center;
       padding: 0 20px 40px;
     }
-
-    /* Game card */
     .game-card {
       background: rgba(0, 75, 141, 0.8);
       padding: 25px;
@@ -59,13 +50,10 @@
       overflow: hidden;
       margin: 0 15px;
     }
-
     .game-card:hover {
       transform: scale(1.08);
       box-shadow: 0 0 30px #00d4ff;
     }
-
-    /* Game title */
     .game-title {
       font-size: 22px;
       margin-bottom: 15px;
@@ -75,8 +63,6 @@
       position: relative;
       z-index: 1;
     }
-
-    /* Launch button */
     .launch-button {
       background: linear-gradient(45deg, #0074d9, #00bfff);
       border: none;
@@ -91,18 +77,14 @@
       position: relative;
       z-index: 1;
     }
-
     .launch-button:hover {
       background: linear-gradient(45deg, #005fa3, #0099cc);
       transform: translateY(-3px);
     }
-
     .launch-button:active {
       transform: translateY(-1px);
       box-shadow: 0 3px 7px #0074d9cc;
     }
-
-    /* Footer */
     #footer {
       position: fixed;
       bottom: 12px;
@@ -124,13 +106,11 @@
     ];
 
     function createGUI() {
-      // Logo
       const logo = document.createElement("img");
       logo.id = "logo";
       logo.src = "https://i.imgur.com/GSJbXh5.png";
       document.body.appendChild(logo);
 
-      // Chrome-only warning
       if (/iPad|iPhone|Safari/.test(navigator.userAgent) && !/Chrome/.test(navigator.userAgent)) {
         const warn = document.createElement("div");
         warn.id = "warning";
@@ -138,11 +118,10 @@
         document.body.appendChild(warn);
       }
 
-      // Game list container
       const gameList = document.createElement("div");
       gameList.id = "game-list";
 
-      games.forEach((game) => {
+      games.forEach(game => {
         const card = document.createElement("div");
         card.className = "game-card";
 
@@ -152,38 +131,9 @@
 
         const button = document.createElement("button");
         button.className = "launch-button";
-        button.innerText = "Play Fullscreen";
+        button.innerText = "Play";
         button.onclick = () => {
-          const win = window.open("about:blank", "_blank");
-          if (!win) {
-            alert("Popup blocked! Please allow popups for this site.");
-            return;
-          }
-          win.document.write(`
-            <!DOCTYPE html>
-            <html lang="en">
-            <head>
-              <title>${game.name}</title>
-              <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-              <style>
-                html, body {
-                  margin: 0; padding: 0; height: 100%; overflow: hidden;
-                }
-                iframe {
-                  position: fixed;
-                  top: 0; left: 0; right: 0; bottom: 0;
-                  width: 100%;
-                  height: 100%;
-                  border: none;
-                }
-              </style>
-            </head>
-            <body>
-              <iframe src="${game.path}" allowfullscreen></iframe>
-            </body>
-            </html>
-          `);
-          win.document.close();
+          window.open(game.path, "_blank");
         };
 
         card.appendChild(title);
@@ -193,7 +143,6 @@
 
       document.body.appendChild(gameList);
 
-      // Footer text
       const footer = document.createElement("footer");
       footer.id = "footer";
       footer.innerText = "©Oskar Projects, IF STOLEN PLEASE CONTACT oskaremailshort@gmail.com.";
