--- a/contents/minecraft-aboutblank.html
+++ b/contents/minecraft-aboutblank.html
@@ -18,7 +18,7 @@
 <body>
   <div id="game_container"></div>
 
-  <script src="https://eaglercraft.com/mc/1.8.8/eaglercraft-client.min.js"></script>
+  <script src="https://eaglercraft.com/mc/1.8.8/?userscript=flameddogo99-eaglermobile.js"></script>
   <script>
     // Initialize the game in #game_container with fullscreen scaling
     Eagler.init({
